Alas it is done. Frontend 99%, 1% leg room granted for inevitable perfectionism. Dark Mode fixed. Reset button. Scroll bar when list gets too large. Added favicon and logo. Displays the check out count. Other Cool UI UX things

--- a/turi-library-webapp/styles/Dashboard.module.css
+++ b/turi-library-webapp/styles/Dashboard.module.css
@@ -1,4 +1,4 @@
 
-.body{
+/*.body{
     @apply flex h-screen w-screen;
-}
+}*/
